2018-06-18  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 43006: Tim Smith: Completion/Unix/Command/_git: complete
	modified files after `git stash --`

	* users/23484: Completion/Unix/Command/_git: be consistent on
	matcher specs for branches to fix issue with partial matching

	* 43048: Eitan: Completion/Unix/Command/_gcc: add sanitizers,
	standards aliases and fix -flto

2018-06-17  dana  <dana@dana.is>

	* 43043: Completion/Unix/Command/_comm,
	Completion/Unix/Command/_sed: Improve comm/sed completion

	* 43039: Src/Modules/parameter.mdd: Mark functions_source (et al.)
	for auto-loading

2018-06-16  dana  <dana@dana.is>

	* 43030: Functions/VCS_Info/Backends/VCS_INFO_get_data_bzr,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_cvs,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_svn,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_tla,
	Functions/VCS_Info/VCS_INFO_bydir_detect,
	Functions/VCS_Info/VCS_INFO_realpath,
	Functions/VCS_Info/vcs_info: Replace VCS_INFO_realpath() by :P

	* 43031: Etc/completion-style-guide: Add note about quoting/escaping
	(cf. 42992)

	* 43031: Etc/completion-style-guide: Add note about optional/variant
	syntax (cf. 43025)

2018-06-15  dana  <dana@dana.is>

	* 43024: Completion/Unix/Command/_man: Improve section-name matching

2018-06-15  Matthew Martin  <phy1729@gmail.com>

	* 42981: Completion/Unix/Command/_ed: Add ed completer

2018-06-15  Peter Stephenson  <p.stephenson@samsung.com>

	* users/23472: 	Doc/Zsh/mod_system.yo, Src/Modules/system.c,
	Src/exec.c, Src/zsh.h: Add $sysparams[procsubstpid].

	* 43008: Src/options.c: combine suggestion from Sebastian to
	silence warnings for double setgid/setuid with suggestion
	from Eitan to put setgid first.

2018-06-13  dana  <dana@dana.is>

	* 42992: Completion/Unix/Command/_bash: Fix minor escaping bug

	* 42992: Completion/Darwin/Command/_nvram,
	Completion/Darwin/Command/_osascript, Completion/Darwin/Command/_say,
	Completion/Darwin/Command/_scselect: Use _call_program to fetch